# StyleUs

./: .env.example  .gitignore  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev.sh  recap.md  render.yaml
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: README.md  ci.yml  (+1 more)
.jules/: sentinel.md
apps/: README.md  npm-audit.json
config/: README.md
data/: README.md
docs/: README.md  tech-stack.md
infrastructure/: README.md
scripts/: README.md
services/: README.md
services/api/: .env.example  Dockerfile  Dockerfile.worker  Makefile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml  test.db
services/api/alembic/: env.py
services/api/alembic/versions/: 202404031200_initial.py  202410291500_add_image_metadata.py  202411010900_add_deleted_at_to_items.py  202502041200_add_ai_classification_fields.py  202511011000_add_seeds_table.py  202512020900_add_primary_secondary_color.py  202512181000_remove_subcategory_column.py  202601200930_add_ai_subcategory_fields.py  202603111000_add_private_storage_object_paths.py  202603111100_add_ai_jobs_table.py  202603111200_add_ai_job_result_payload.py  202603181030_add_ai_embeddings_and_attributes.py  202604071520_add_ai_review_feedback_events.py
services/api/app/: README.md  main.py  worker.py  worker_service.py
services/api/app/ai/: __init__.py  benchmark.py  clip_heads.py  color.py  feedback_eval.py  labels.py  pipeline.py  segmentation.py  tasks.py  worker.py
services/api/app/api/: README.md  __init__.py  deps.py
services/api/app/api/routers/: __init__.py  health.py  items.py  uploads.py  version.py
services/api/app/core/: README.md  auth.py  config.py  errors.py  logging.py
services/api/app/db/: __init__.py  base.py  migrations.py  session.py  types.py
services/api/app/dependencies/: README.md
services/api/app/models/: README.md  __init__.py  ai_feedback.py  ai_job.py  seed.py  user.py  wardrobe.py
services/api/app/runtime/: __init__.py  startup.py  worker_host.py
services/api/app/schemas/: README.md  __init__.py  common.py  items.py
services/api/app/seed/: README.md  __init__.py  runner.py  seed_sources.yaml  utils.py
services/api/app/services/: README.md  __init__.py  ai_jobs.py  items.py  search.py  uploads.py  users.py
services/api/app/utils/: __init__.py  http.py  images.py  s3.py  storage.py
services/api/config/: README.md
services/api/scripts/: README.md
services/api/tests/: README.md  conftest.py  test_ai_tasks.py  test_ai_worker.py  test_auth.py  test_category_benchmark.py  test_ci_verify_deploy.py  test_color.py  test_config.py  test_feedback_eval.py  test_health.py  test_items.py  test_packaging.py  test_pipeline.py  test_runtime_boundaries.py  test_security_headers.py  test_seed.py  test_taxonomy_export.py  test_uploads.py
services/api/tests/fixtures/: upload_category_cases.yaml  upload_review_feedback_cases.yaml
services/api/tests/integration/: README.md
services/api/tests/unit/: README.md
tests/: README.md
(+114 files in other folders)
