[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "styleus-api"
version = "0.1.0"
description = "StyleUs API service"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
dependencies = [
    "fastapi==0.120.4",
    "starlette==0.49.3",
    "uvicorn[standard]==0.29.0",
    "SQLAlchemy==2.0.29",
    "alembic==1.13.1",
    "PyJWT[crypto]==2.12.0",
    "certifi==2026.1.4",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "psycopg[binary]==3.1.18",
    "Pillow==12.2.0",
    "numpy==1.26.4",
    "scikit-learn==1.5.0",
    "PyYAML==6.0.1",
]

[project.optional-dependencies]
ai = [
    "open-clip-torch==2.26.1",
    "timm==1.0.12",
    "transformers==5.0.0",
]
dev = [
    "open-clip-torch==2.26.1",
    "timm==1.0.12",
    "httpx<0.28",
    "pytest==9.0.3",
    "ruff==0.3.5",
    "mypy==1.8.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "UP",
    "N",
    "B",
    "A",
    "C4",
    "ISC",
]
ignore = [
    "D",    # documentation rules
    "B008", # FastAPI dependency injection requires Depends defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
disallow_untyped_defs = true
ignore_missing_imports = true
